--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "https://bounce.finance/",
+  "start_url": "https://antimatter.finance/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
