fix link & manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Bounce",
-  "name": "Bounce",
+  "short_name": "Antimatter",
+  "name": "Antimatter",
   "icons": [
     {
       "src": "images/logo64.png",
